exports[`test Renders score ok. 1`] = `
<div
  className="overall-ranking centred">
  <h1
    className="heading">
    Your Ranking!
  </h1>
  <h2
    className="rank">
    2nd
    !
  </h2>
</div>
`;

exports[`test Renders unrated if no ranking. 1`] = `
<div
  className="overall-ranking centred">
  <h1
    className="heading">
    Your Ranking!
  </h1>
  <h2
    className="rank">
    Unranked
    !
  </h2>
</div>
`;
